# artdaq_epics_plugin

./: .gitignore  CMakeLists.txt  CMakePresets.json
Modules/: FindEPICS.cmake
artdaq-epics-plugin/: CMakeLists.txt  epics_metric.cc
artdaq-epics-plugin/MetricPlugins/: CMakeLists.txt  epics_metric.cc
artdaq-epics-plugin/MetricPlugins/fcl/: epics.fcl
artdaq-epics-plugin/fcl/: epics.fcl
scripts/: CMakeLists.txt  declare_epics_current.sh
ups/: product_deps
